[gd_scene load_steps=3 format=3 uid="uid://bhg2hhe1ms0sd"]

[ext_resource type="Script" path="res://scenes/objects/DamageArea/damage_area.gd" id="1_qdid0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_04u3m"]
radius = 5.02494

[node name="DamageArea" type="Area2D" groups=["damage"]]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_qdid0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["damage"]]
position = Vector2(13, -0.5)
shape = SubResource("CircleShape2D_04u3m")

[node name="Duration" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
